--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-matplotlib==3.8.4
-pandas==2.2.3
+streamlit==1.38.0
+scipy==1.13.0
 plotly==5.24.1
-SciencePlots==2.1.1
-scipy==1.14.1
+kaleido==0.2.1
